--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="style.css" />
 
     <title>Dapur Brinara</title>
@@ -69,45 +70,372 @@
               >
             </li>
           </ul>
-          <button type="button" class="btn btn-outline-dark">Dark</button>
-          <button type="button" class="btn btn-outline-dark">Dark</button>
+          <button type="button" class="btn btn-outline-success">daftar</button>
+          <button type="button" class="btn btn-outline-info ms-3">login</button>
         </div>
       </div>
     </nav>
     <!-- Jumbotron -->
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">
+      <div class="container d-flex flex-column justify-content-center">
+        <h1 class="display-4 fw-bold">
           <span>Beli Kue?</span> Yaa di <br />
           Toko KUE <span>BRINARA</span>
         </h1>
-        <a href="" class="btn btn-danger tombol">Pengaduan</a>
+        <a href="" class="btn btn-danger tombol">Beli Sekarang</a>
       </div>
     </div>
     <!-- Akhir Jumbotron -->
+
     <!-- Partner -->
 
     <div id="partner" class="partner">
       <div class="container partner-wrapper">
         <div class="partner-brand">
-          <div><img src="./assets/logo-1.png" /></div>
-          <div><img src="./assets/logo-3.png" /></div>
-          <div><img src="./assets/logo-4.png" /></div>
-          <div><img src="./assets/logo-5.png" /></div>
+          <div>
+            <img
+              src="https://raw.githubusercontent.com/ramjakaperdana23/gamelab/main/assets/logo-1.png"
+            />
+          </div>
+          <div>
+            <img
+              src="https://raw.githubusercontent.com/ramjakaperdana23/gamelab/main/assets/logo-3.png"
+            />
+          </div>
+          <div>
+            <img
+              src="https://raw.githubusercontent.com/ramjakaperdana23/gamelab/main/assets/logo-4.png"
+            />
+          </div>
+          <div>
+            <img
+              src="https://raw.githubusercontent.com/ramjakaperdana23/gamelab/main/assets/logo-5.png"
+            />
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- Partner -->
+    <!--  akhir Partner -->
+
+    <!-- Detail Bahan -->
+    <div id="ingredients" class="container mt-4">
+      <div class="row g-3">
+        <div class="col-6">
+          <h1>Garam</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            nam animi sequi asperiores iusto necessitatibus obcaecati et,
+            possimus omnis, quia aliquam numquam beatae ab minima nemo quidem id
+            quasi voluptates.
+          </p>
+          <button type="button" class="btn btn-outline-info">
+            Learn More!
+          </button>
+        </div>
+        <div class="col-6">
+          <h1>Garam</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            nam animi sequi asperiores iusto necessitatibus obcaecati et,
+            possimus omnis, quia aliquam numquam beatae ab minima nemo quidem id
+            quasi voluptates.
+          </p>
+          <button type="button" class="btn btn-outline-info">
+            Learn More!
+          </button>
+        </div>
+        <div class="col-6">
+          <h1>Garam</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            nam animi sequi asperiores iusto necessitatibus obcaecati et,
+            possimus omnis, quia aliquam numquam beatae ab minima nemo quidem id
+            quasi voluptates.
+          </p>
+          <button type="button" class="btn btn-outline-info">
+            Learn More!
+          </button>
+        </div>
+        <div class="col-6">
+          <h1>Garam</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            nam animi sequi asperiores iusto necessitatibus obcaecati et,
+            possimus omnis, quia aliquam numquam beatae ab minima nemo quidem id
+            quasi voluptates.
+          </p>
+          <button type="button" class="btn btn-outline-info">
+            Learn More!
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Akhir detail bahan  -->
+
+    <!-- Tentang Kami -->
+    <div id="Tentang Kami " class="container mt-5">
+      <div class="d-flex flex-row align-items-center">
+        <img src="https://picsum.photos/480" class="rounded-3 me-5" />
+        <div>
+          <h1>Tentang Kami</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ab
+            natus excepturi fugiat porro, veritatis itaque dolorum accusamus.
+            Eveniet praesentium tempore similique deserunt qui reprehenderit
+            blanditiis ipsum quas ut rem?
+          </p>
+        </div>
+      </div>
+      <div class="d-flex flex-row align-items-center">
+        <div>
+          <h1>Temukan Kami</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ab
+            natus excepturi fugiat porro, veritatis itaque dolorum accusamus.
+            Eveniet praesentium tempore similique deserunt qui reprehenderit
+            blanditiis ipsum quas ut rem?
+          </p>
+        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15818.535748442615!2d111.5537102!3d-7.61475109999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e79bf4d0ca4ae17%3A0xadcd2b39c7174599!2sDAPUR%20BRINARA!5e0!3m2!1sid!2sid!4v1692111852769!5m2!1sid!2sid"
+          width="800"
+          height="600"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </div>
+    <!-- Akhir Tentang Kami -->
+    <section class="pt-5 pb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <h3 class="mb-3">Carousel cards title</h3>
+          </div>
+          <div class="col-6 text-right">
+            <a
+              class="btn btn-primary mb-3 mr-1"
+              href="#carouselExampleIndicators2"
+              role="button"
+              data-slide="prev"
+            >
+              <i class="fa fa-arrow-left"></i>
+            </a>
+            <a
+              class="btn btn-primary mb-3"
+              href="#carouselExampleIndicators2"
+              role="button"
+              data-slide="next"
+            >
+              <i class="fa fa-arrow-right"></i>
+            </a>
+          </div>
+          <div class="col-12">
+            <div
+              id="carouselExampleIndicators2"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="row">
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1532781914607-2031eca2f00d?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=7c625ea379640da3ef2e24f20df7ce8d"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1517760444937-f6397edcbbcd?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=42b2d9ae6feb9c4ff98b9133addfb698"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=3d2e8a2039c06dd26db977fe6ac6186a"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1532771098148-525cefe10c23?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=3f317c1f7a16116dec454fbc267dd8e4"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1532715088550-62f09305f765?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=ebadb044b374504ef8e81bdec4d0e840"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1506197603052-3cc9c3a201bd?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=0754ab085804ae8a3b562548e6b4aa2e"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=ee8417f0ea2a50d53a12665820b54e23"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=8ac55cf3a68785643998730839663129"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <div class="card">
+                        <img
+                          class="img-fluid"
+                          alt="100%x280"
+                          src="https://images.unsplash.com/photo-1532763303805-529d595877c5?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=5ee4fd5d19b40f93eadb21871757eda6"
+                        />
+                        <div class="card-body">
+                          <h4 class="card-title">Special title treatment</h4>
+                          <p class="card-text">
+                            With supporting text below as a natural lead-in to
+                            additional content.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Display Produk  -->
+
+    <div id="Kontak " class="container mt-5">
+      <div class="d-flex flex-row justify-content-between align-items-center">
+        <div>
+          <h1 class="display-4 fw-bold">
+            <span>Masih </span> Ragu ?<br />
+           Yuk <span>sini hubungi kita </span>
+          </h1>
+        </div>
+        <div>
+        <button type="button" class="btn btn-outline-dark me-4">Whatsapp</button>
+        <button type="button" class="btn btn-outline-dark ms-3">Hubungi Kita</button>
+      </div>
+      </div>
+      <!-- Footer  -->
+      <div class="container mt-5">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+          </ul>
+          <p class="text-center text-muted">© 2023 Dapur, Brinara</p>
+        </footer>
+      </div>
+      <!-- Akhir Web/ Footer -->
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
   </body>
