--- a/postingan.html
+++ b/postingan.html
@@ -21,6 +21,9 @@
       crossorigin="anonymous"
     />
     <link href="css/styles.css" rel="stylesheet" />
+                     <script type='text/javascript' src=''></script>
+                                <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+                                <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
   </head>
   <title>Dapur Brinara</title>
   <body>
@@ -91,7 +94,7 @@
             <!-- Post header-->
             <header class="mb-4">
               <!-- Post title-->
-              <h1 class="fw-bolder mb-1">Welcome to Blog Post!</h1>
+              <h1 class="fw-bolder mb-1">Rangkuman Materi #5</h1>
               <!-- Post meta content-->
               <div class="text-muted fst-italic mb-2">
                 Posted on 16 Agustus , 2023 by Ramjaka Perdana
@@ -120,7 +123,27 @@
             <section class="mb-5">
               <p class="fs-5 mb-4">
                 Science is an enterprise that should be cherished as an activity
-                of the free human mind. Because it transforms who we are, how we
+                of the free human mind.
+                <ul class="list-unstyled">
+                  <li>This is a list.</li>
+                  <li>It appears completely unstyled.</li>
+                  <li>Structurally, it's still a list.</li>
+                  <li>However, this style only applies to immediate child elements.</li>
+                  <li>Nested lists:
+                    <ul>
+                      <li>are unaffected by this style</li>
+                      <li>will still show a bullet</li>
+                      <li>and have appropriate left margin</li>
+                    </ul>
+                  </li>
+                  <li>This may still come in handy in some situations.</li>
+                </ul>
+                <ul class="list-inline">
+                  <li class="list-inline-item">This is a list item.</li>
+                  <li class="list-inline-item">And another one.</li>
+                  <li class="list-inline-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, nam. Nesciunt tenetur quos nulla quod esse quaerat? Vel aspernatur officia nihil cupiditate cumque maxime magnam, in velit odio. Impedit, sunt.</li>
+                </ul>
+                Because it transforms who we are, how we
                 live, and it gives us an understanding of our place in the
                 universe.
               </p>
@@ -156,6 +179,35 @@
                 water. It's bone dry today. Something bad happened there as
                 well.
               </p>
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table>
               <p><h1>h1. Bootstrap heading</h1>
                 <h2>h2. Bootstrap heading</h2>
                 <h3>h3. Bootstrap heading</h3>
@@ -170,7 +222,18 @@
                 <h1 class="display-4">Display 4</h1>
               </p>
               <p>
-
+                <figure>
+                  <figure class="figure">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Albert_Einstein_Head.jpg/450px-Albert_Einstein_Head.jpg?20141125195928" class="figure-img img-fluid rounded" >
+                  <figcaption class="figure-caption">Albert Einstein</figcaption>
+                </figure>
+                  <blockquote class="blockquote">
+                    <p>Peace cannot be kept by force. It can only be achieved by understanding.</p>
+                  </blockquote>
+                  <figcaption class="blockquote-footer">
+                    Albert Einstein <cite title="Source Title">Force</cite>
+                  </figcaption>
+                </figure>
               </p>
             </section>
           </article>
