penambahan modal contact dan FAQ

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand"href="#"> <img src="assets/favicon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <a class="navbar-brand"href="#"> <img src="https://raw.githubusercontent.com/ramjakaperdana23/gamelab/main/assets/favicon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
           Brinara ID</a>
         <button
           class="navbar-toggler" 
@@ -53,13 +53,13 @@
     </nav>
     <!-- Jumbotron -->
 
-    <div class="jumbotron jumbotron-fluid">
+    <div id="gambar-cover" class="jumbotron jumbotron-fluid">
       <div class="container d-flex flex-column justify-content-center">
         <h1 class="display-4 fw-bold">
           <span>Beli Kue?</span> Yaa di <br />
-          Toko KUE <span>BRINARA</span>
+          Dapur <span>BRINARA</span>
         </h1>
-        <a href="#Kontak" class="btn btn-danger tombol" role="button">Pesan Sekarang </a>
+        <a href="" class="btn btn-danger tombol" data-toggle="modal" data-target="#modalContactForm" role="button">Pesan Sekarang </a>
       </div>
     </div>
     <!-- Akhir Jumbotron -->
@@ -154,7 +154,7 @@
         <div class="col-lg-6 col-md-12">
           <h1>Temukan Kami</h1>
           <p style="font-size: x-large;">
-            Anda dapat menemukan toko kue Brinara dengan mudah di lokasi kami yang strategis di <span style="font-style: italic; font-weight: bolder;">Jl. Pilang Suci, RT.18/RW.04, Pilangbango, Kec. Kartoharjo, Kota Madiun, Jawa Timur 63119.</span> Kami berada di tengah-tengah kota dengan akses yang nyaman, siap menyambut Anda untuk menikmati pilihan kue istimewa kami. Jangan ragu untuk datang dan menjelajahi berbagai kenikmatan kue yang kami sajikan di Brinara!
+            Anda dapat menemukan Dapur Brinara dengan mudah di lokasi kami yang strategis di <span style="font-style: italic; font-weight: bolder;">Jl. Pilang Suci, RT.18/RW.04, Pilangbango, Kec. Kartoharjo, Kota Madiun, Jawa Timur 63119.</span> Kami berada di tengah-tengah kota dengan akses yang nyaman, siap menyambut Anda untuk menikmati pilihan kue istimewa kami. Jangan ragu untuk datang dan menjelajahi berbagai kenikmatan kue yang kami sajikan di Brinara!
           </p>
         </div>
         <iframe
@@ -328,7 +328,7 @@
                           <h4 class="card-title">BTS 2.0</h4>
                           <p class="card-text">
                             Serasa Diucapin Ulang Tahun Sama seluruh member BTS??
-                             Pastinya Bakalan Jadi KUE Memorable untukmu 
+                            Pastinya Bakalan Jadi KUE Memorable untukmu 
                           </p>
                         </div>
                       </div>
@@ -366,16 +366,116 @@
         <div class="col-lg-6 col-md-12 anak-kontak">
           <h1 class="display-4 fw-bold ">
             <span>Masih </span> Ragu ?<br />
-           Yuk <span>sini hubungi Kami </span>
+          Yuk <span>sini Konsultasikan Kuemu dengan Kami </span>
           </h1>
         </div>
         <div class="col-lg-6 col-md-12 footer-tombol">
           <div class="d-flex flex-lg-row flex-md-column footer-tombol-wrapper " style="gap: 8px;">
-            <button type="button" class="btn btn-outline-success">Whatsapp</button>
-            <button type="button" class="btn btn-outline-info">Hubungi Kami</button>
+            <button type="button" class="btn btn-outline-success fab fa-whatsapp ">WA</button>
+            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#modalContactForm">Hubungi Kami</button>
           </div>
       </div>
       </div>
+
+    <!-- Testimonial -->
+
+    <!-- Akhir Testimonial -->
+
+    <!-- Kontak kami -->
+
+    <!-- FAQ -->
+  <div class="container">
+    <div class="row" style="justify-content: center;">
+        <div class="col-md-10">
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingOne">
+                        <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Apakah "Brinara" menerima pesanan kue khusus untuk acara-acara tertentu?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                        <div class="panel-body">
+                            <p>Ya, tentu saja! Kami dengan senang hati menerima pesanan kue khusus untuk berbagai acara seperti ulang tahun, pernikahan, pertemuan bisnis, dan lain-lain.
+                              Tim kami akan bekerja sama dengan Anda untuk merancang kue yang sesuai dengan tema dan preferensi acara Anda. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              Apa spesialisasi dari "Dapur Brinara"?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                        <div class="panel-body">
+                            <p> kami menawarkan beragam pilihan kue, mulai dari klasik seperti jajanan pasar hingga kue inovatif,
+                              sehingga pelanggan dapat menemukan sesuai dengan preferensi mereka. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              Bagaimana cara saya melakukan pemesanan di "Dapur Brinara"?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                        <div class="panel-body">
+                            <p>Anda bisa mengunjungi toko fisik, menghubungi melalui telepon, memesan melalui situs web "Brinara" ini melalui form kontak lewat tombol 
+                              <a class="btn btn-danger" href="#gambar-cover" role="button">Pesan Sekarang</a> yang ada, atau <br><h3 style="text-align: center;">hubungi kami lewat social media kami dibawah <br><i class="fa-solid fa-arrow-down fa-bounce fa-xl mt-5"></i></h3> </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    <!-- Akhir FAQ -->
+    <div class="modal fade" id="modalContactForm"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog"  >
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Write to us</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form target="_blank" action="https://formsubmit.co/bbda2e33df65a6d1b1cbd316fdd55220" method="POST">
+      <div class="modal-body mx-3">
+        <div class="mb-3">
+          <label for="email" class="form-label">Alamat Email</label>
+          <input type="email" id="email" class="form-control" placeholder="Email" name="email" required >
+        </div>
+
+        <div class="mb-3">
+          <label for="name" class="form-label">Nama</label>
+          <input type="text" id="Name" class="form-control" placeholder="Nama" name="name" required >
+        </div>
+
+        <div class="mb-3">
+          <label for="Message" class="form-label">Detail Pesan</label>
+          <textarea class="form-control" id="Message" name="message" rows="3" required></textarea>
+        </div>
+
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button  type="submit" class="btn btn-outline-danger">Send <i class="fas fa-paper-plane-o ml-1"></i></button>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
+<!-- akhir dari form kontak -->
+
       <!-- Footer  -->
       <footer class="bg-light text-center text-white">
         <!-- Grid container -->
