--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 <div class="container-xl testimonial">
 	<div class="row">
 		<div class="col-sm-12">
-			<h2>What <b>our customers</b> are saying</h2>
+			<h2>Apa <b>Yang</b> mereka katakan ?</h2>
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Carousel indicators -->
 				<ol class="carousel-indicators">
