--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 									<div class="media-body">
 										<div class="testimonial">
 											<p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nam eusem scelerisque tempor, varius quam luctus dui. Mauris magna metus nec.</p>
-											<p class="overview"><b>Paula Wilson</b>, Media Analyst</p>
+											<p class="overview"><b>Joko Widodo</b>, Presiden RI 7</p>
 										</div>
 									</div>
 								</div>
@@ -642,7 +642,7 @@
 									<div class="media-body">
 										<div class="testimonial">
 											<p>Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget mi suscipit tincidunt. Utmtc tempus dictum. Pellentesque virra.</p>
-											<p class="overview"><b>Antonio Moreno</b>, Web Developer</p>
+											<p class="overview"><b>Megawati</b>, Presiden Ri 5</p>
 										</div>
 									</div>
 								</div>
@@ -657,7 +657,7 @@
 									<div class="media-body">
 										<div class="testimonial">
 											<p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nam eusem scelerisque tempor, varius quam luctus dui. Mauris magna metus nec.</p>
-											<p class="overview"><b>Michael Holz</b>, Seo Analyst</p>
+											<p class="overview"><b>Susilo Bambang Y</b>, Presiden Ri 6</p>
 										</div>
 									</div>
 								</div>
@@ -668,7 +668,7 @@
 									<div class="media-body">
 										<div class="testimonial">
 											<p>Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget mi suscipit tincidunt. Utmtc tempus dictum. Pellentesque virra.</p>
-											<p class="overview"><b>Mary Saveley</b>, Web Designer</p>
+											<p class="overview"><b>Abdurahman Wahid</b>, Presiden Ri 4</p>
 										</div>
 									</div>
 								</div>
@@ -683,7 +683,7 @@
 									<div class="media-body">
 										<div class="testimonial">
 											<p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nam eusem scelerisque tempor, varius quam luctus dui. Mauris magna metus nec.</p>
-											<p class="overview"><b>Martin Sommer</b>, UX Analyst</p>
+											<p class="overview"><b>Susilo Bambang Y</b>, Presiden Ri 6</p>
 										</div>
 									</div>
 								</div>
@@ -694,7 +694,7 @@
 									<div class="media-body">
 										<div class="testimonial">
 											<p>Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget mi suscipit tincidunt. Utmtc tempus dictum. Pellentesque virra.</p>
-											<p class="overview"><b>John Williams</b>, Web Developer</p>
+											<p class="overview"><b>Joko Widodo</b>, Presiden Ri 7</p>
 										</div>
 									</div>
 								</div>
